--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "graphql": "^16.11.0",
     "graphql-request": "^7.3.1",
     "lucide-react": "^0.548.0",
-    "next": "16.0.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "tailwind-merge": "^3.3.1",
     "viem": "^2.38.4",
     "wagmi": "^2.19.0",
